# client

./: CMakeLists.txt
src/cmd/: CMakeLists.txt
src/csync/: CMakeLists.txt
src/gui/: CMakeLists.txt
src/libsync/: CMakeLists.txt
src/libsync/vfs/suffix/: CMakeLists.txt
